Fix z-index for icon block bg

--- a/src/blocks/svg-icon-maxi/style.scss
+++ b/src/blocks/svg-icon-maxi/style.scss
@@ -3,6 +3,7 @@ body.maxi-blocks--active .maxi-svg-icon-block {
 
 	.maxi-svg-icon-block__icon {
 		display: flex;
+		z-index: 20;
 
 		svg {
 			position: relative;
